--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -2194,6 +2194,7 @@
             });
 
             let token = localStorage.getItem('token');
+            let idUser = localStorage.getItem('idUser');
 
             if (!token) {
                 alert("Você precisa estar logado para salvar os sintomas.");
@@ -2210,7 +2211,9 @@
                 dias: diasSelecionados
             };
 
-            fetch(`/salvarSintomas/${userId}`, {
+            console.log(dados);
+
+            fetch(`/salvarSintomas/${idUser}`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -2223,7 +2226,10 @@
                     if (data.success) {
                         alert("Sintomas salvos com sucesso!");
                         // Fechar o modal após salvar
-                        $('#modalSintomas').modal('hide');
+                            const modalElement = document.getElementById('modalSintomas');
+                            const modal = bootstrap.Modal.getInstance(modalElement);
+                            modal.hide();
+
                     } else {
                         alert("Houve um erro ao salvar os sintomas.");
                     }
