--- a/Views/Usuario/EsqueciSenha.cshtml
+++ b/Views/Usuario/EsqueciSenha.cshtml
@@ -79,6 +79,16 @@
         background-color: #1d1f21;
     }
 
+    .invalid {
+        color: red;
+        font-size: 0.875rem;
+    }
+
+    .valid {
+        color: green;
+        font-size: 0.875rem;
+    }
+
     /* Modo Noturno */
     body.dark-mode {
         background-color: #121212;
@@ -149,6 +159,13 @@
                                 <span id="btnVeja" class="input-group-text">
                                     <i id="togglePassword" class="fas fa-eye"></i>
                                 </span>
+                            </div>
+                            <div id="password-requirements" class="mt-2">
+                                <p id="length" class="invalid">No mínimo 8 caracteres</p>
+                                <p id="lowercase" class="invalid">No mínimo 1 caractere minúsculo</p>
+                                <p id="uppercase" class="invalid">No mínimo 1 letra maiúscula</p>
+                                <p id="numberReq" class="invalid">No mínimo 1 número</p>
+                                <p id="specialChar" class="invalid">No mínimo 1 caractere especial</p>
                             </div>
                         </div>
 
@@ -309,23 +326,10 @@
             errorMessage.style.display = 'block';
         }
 
-        function togglePasswordVisibility(inputId, iconId) {
-            const passwordField = document.getElementById(inputId);
-            const icon = document.getElementById(iconId);
-
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-                icon.classList.remove("fa-eye");
-                icon.classList.add("fa-eye-slash");
-            } else {
-                passwordField.type = "password";
-                icon.classList.remove("fa-eye-slash");
-                icon.classList.add("fa-eye");
-            }
-        }
     </script>
 
 
+    <script src="~/js/script2.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
